{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 201,
  "lineage": "6a39d45d-77a3-d641-ae3a-d81d6f532d7f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_host1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089a545a9ed9893b6",
            "arn": "arn:aws:ec2:us-east-2:391628505900:instance/i-043644e732d9486b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SsmDynamo",
            "id": "i-043644e732d9486b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0852f933346c21e11",
            "private_dns": "ip-10-1-1-47.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.47",
            "public_dns": "ec2-3-15-193-154.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.193.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e504c8b47cf7ac01",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ce60faa3a7f85e9",
            "tags": {
              "Name": "ec2_host1"
            },
            "tags_all": {
              "Name": "ec2_host1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbc198c747e40c6c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.SsmDynamo",
            "aws_security_group.instance_sg",
            "aws_subnet.public1",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az",
            "data.aws_iam_role.ssm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_host2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-089a545a9ed9893b6",
            "arn": "arn:aws:ec2:us-east-2:391628505900:instance/i-0285dbd0098765fa4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "SsmDynamo",
            "id": "i-0285dbd0098765fa4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0272d5a8d733d0d72",
            "private_dns": "ip-10-1-2-55.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.55",
            "public_dns": "ec2-3-143-67-195.us-east-2.compute.amazonaws.com",
            "public_ip": "3.143.67.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048971b5fa1af4a0d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aea1f2bdf999fe62",
            "tags": {
              "Name": "ec2_host2"
            },
            "tags_all": {
              "Name": "ec2_host2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dbc198c747e40c6c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.SsmDynamo",
            "aws_security_group.instance_sg",
            "aws_subnet.public2",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az",
            "data.aws_iam_role.ssm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:internet-gateway/igw-021087fa7368268cb",
            "id": "igw-021087fa7368268cb",
            "owner_id": "391628505900",
            "tags": {
              "Name": "dev_gw"
            },
            "tags_all": {
              "Name": "dev_gw"
            },
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dev_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:loadbalancer/app/dev-python-flask/a0dde875d61159fc",
            "arn_suffix": "app/dev-python-flask/a0dde875d61159fc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-python-flask-106208436.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:391628505900:loadbalancer/app/dev-python-flask/a0dde875d61159fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-python-flask",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0368a1770be57cb79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ce60faa3a7f85e9"
              },
              {
                "subnet_id": "subnet-0aea1f2bdf999fe62"
              }
            ],
            "subnets": [
              "subnet-04ce60faa3a7f85e9",
              "subnet-0aea1f2bdf999fe62"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-0087124b7a2b5888d",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "dev_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:listener/app/dev-python-flask/a0dde875d61159fc/5dbfecdafc7a179f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:targetgroup/instance-tg/21133c61894baee0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:391628505900:listener/app/dev-python-flask/a0dde875d61159fc/5dbfecdafc7a179f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:loadbalancer/app/dev-python-flask/a0dde875d61159fc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dev_alb",
            "aws_lb_target_group.dev_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dev_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:targetgroup/instance-tg/21133c61894baee0",
            "arn_suffix": "targetgroup/instance-tg/21133c61894baee0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:391628505900:targetgroup/instance-tg/21133c61894baee0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "instance-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "dev_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:391628505900:targetgroup/instance-tg/21133c61894baee0-20221025034600620300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:391628505900:targetgroup/instance-tg/21133c61894baee0",
            "target_id": "i-043644e732d9486b3"
          },
          "dependencies": [
            "aws_iam_instance_profile.SsmDynamo",
            "aws_instance.ec2_host1",
            "aws_lb_target_group.dev_tg",
            "aws_security_group.instance_sg",
            "aws_subnet.public1",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az",
            "data.aws_iam_role.ssm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:route-table/rtb-0bb0565bbd001ccd0",
            "id": "rtb-0bb0565bbd001ccd0",
            "owner_id": "391628505900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021087fa7368268cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public1_rt"
            },
            "tags_all": {
              "Name": "Public1_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:route-table/rtb-0230f591862e4aa93",
            "id": "rtb-0230f591862e4aa93",
            "owner_id": "391628505900",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-021087fa7368268cb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public2_rt"
            },
            "tags_all": {
              "Name": "Public2_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c96796bb00bc8a2",
            "route_table_id": "rtb-0bb0565bbd001ccd0",
            "subnet_id": "subnet-04ce60faa3a7f85e9"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.Public1_rt",
            "aws_subnet.public1",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014109d00ac91aa8d",
            "route_table_id": "rtb-0230f591862e4aa93",
            "subnet_id": "subnet-0aea1f2bdf999fe62"
          },
          "dependencies": [
            "aws_internet_gateway.dev_gw",
            "aws_route_table.Public2_rt",
            "aws_subnet.public2",
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:security-group/sg-0368a1770be57cb79",
            "description": "Allow TLS inbound traffic and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0368a1770be57cb79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls and ssh",
            "name_prefix": "",
            "owner_id": "391628505900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb1_sg"
            },
            "tags_all": {
              "Name": "alb1_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:security-group/sg-0dbc198c747e40c6c",
            "description": "Allow TLS inbound traffic and ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbc198c747e40c6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "391628505900",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance_sg"
            },
            "tags_all": {
              "Name": "instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:subnet/subnet-04ce60faa3a7f85e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ce60faa3a7f85e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391628505900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public1"
            },
            "tags_all": {
              "Name": "Public1"
            },
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:subnet/subnet-0aea1f2bdf999fe62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/26",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aea1f2bdf999fe62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "391628505900",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public2"
            },
            "tags_all": {
              "Name": "Public2"
            },
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "dependencies": [
            "aws_vpc.dev",
            "data.aws_availability_zones.dev_az"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:vpc/vpc-0087124b7a2b5888d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/20",
            "default_network_acl_id": "acl-0020bba73a345b709",
            "default_route_table_id": "rtb-0e8005bcaea4ac0c0",
            "default_security_group_id": "sg-043e7745c9184f3db",
            "dhcp_options_id": "dopt-0a8dc2a990fc7dc6e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0087124b7a2b5888d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e8005bcaea4ac0c0",
            "owner_id": "391628505900"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:391628505900:vpc-endpoint/vpce-0ad6597d33af33262",
            "cidr_blocks": [
              "35.71.102.128/26",
              "35.71.102.0/25",
              "52.94.4.0/24"
            ],
            "id": "vpce-0ad6597d33af33262",
            "owner_id": "391628505900",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-4ca54025",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-2.dynamodb",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0087124b7a2b5888d"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    }
  ]
}